--- a/public/test1.html
+++ b/public/test1.html
@@ -51,6 +51,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>I was actually looking for that file.</h1>
+    <p>Well here we go...</p>
     <p>I did not misstype anything and I'm happy with the result :) </p>
   </div>
   <p>If you are the application owner check the logs for more information.</p>
